fairway-sf/force-app/main/default/objects/Bay_Reservation__c/Bay_Reservation__c.object-meta.xml
<CustomObject>
    <label>Bay Reservation</label>
    <pluralLabel>Bay Reservations</pluralLabel>
    <description>A booked block of time on a Simulator Bay. The commercial transaction that a Golf Session happens under.</description>
    <nameField>
        <label>Reservation Name</label>
        <type>AutoNumber</type>
        <displayFormat>RES-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>