fairway-sf/force-app/main/default/objects/Bay_Reservation__c/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <label>Access Code</label>
    <type>Text</type>
    <length>20</length>
</CustomField>