fairway-sf/force-app/main/default/objects/Bay_Reservation__c/fields/Booker__c.field-meta.xml
<CustomField>
    <fullName>Booker__c</fullName>
    <label>Booker</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Bay_Reservations</relationshipName>
    <relationshipLabel>Bay Reservations</relationshipLabel>
    <deleteConstraint>Restrict</deleteConstraint>
    <required>true</required>
</CustomField>