fairway-sf/force-app/main/default/objects/Bay_Reservation__c/fields/Booking_Source__c.field-meta.xml
<CustomField>
    <fullName>Booking_Source__c</fullName>
    <label>Booking Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Web</fullName><default>false</default><label>Web</label></value>
            <value><fullName>App</fullName><default>false</default><label>App</label></value>
            <value><fullName>Phone</fullName><default>false</default><label>Phone</label></value>
            <value><fullName>Walk-in</fullName><default>false</default><label>Walk-in</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>