fairway-sf/force-app/main/default/objects/Bay_Reservation__c/fields/Number_of_Players__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Players__c</fullName>
    <label>Number of Players</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
</CustomField>