fairway-sf/force-app/main/default/objects/Bay_Reservation__c/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <label>Reservation Status</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Booked</fullName><default>true</default><label>Booked</label></value>
            <value><fullName>Checked In</fullName><default>false</default><label>Checked In</label></value>
            <value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value>
            <value><fullName>Completed</fullName><default>false</default><label>Completed</label></value>
            <value><fullName>No-Show</fullName><default>false</default><label>No-Show</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>